--- a/index.html
+++ b/index.html
@@ -2,9 +2,9 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <link rel="icon" type="image/svg+xml" href="/Users/jozefwhite/Documents/hitem-jukebox/src/Assets/Thank_You_Dream_Girl_3000px.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite + React</title>
+    <title>HIT 'EM</title>
   </head>
   <body>
     <div id="root"></div>
